corrected navbar on small devices 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,8 +143,6 @@ background-attachment: fixed !important;
     .brandShow {
       display:none;
     }
-}
-@media screen and (max-width: 990px){
 	.navbar-brand
 	{
 		margin-right:0;
